# pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iuv"
version = "0.1.0"
authors = [
  { name="Fabian Guera", email="fabian.guera@gmail.com" },
]
description = "Reruns uv foo/bar.py if files in foo/../... change."
requires-python = ">=3.8"

dependencies = [
]

[project.scripts]
iuv = "iuv:main"

[tool.hatch.build.targets.wheel]
include = ["iuv.py"]

